# sortviz

./: .gitignore  README.md  setup.cfg
examples/: bogo_sort.py  bubble_sort.py  bubble_sort_single_iter.py  insertion_sort.py  quicksort.py  selection_sort.py
src/sort_alg_visual/: __init__.py  __main__.py  base.py
src/sortviz/: .base.py.swp  __init__.py  base.py  util.py
