[metadata]
name = sortviz
version = 1.0.2
license = GPL-3.0
description = Sorting algorithm visualizer
long_description = file: README.md
classifiers = Development Status :: 2 - Pre-Alpha

[options]
packages = find:
package_dir =
        = src
include_package_data = True

[options.packages.find]
where = src
